%%{init: {'theme':'base','themeVariables':{'primaryColor':'#ffffff','primaryTextColor':'#0b1220','primaryBorderColor':'#0f172a','lineColor':'#1e293b','fontFamily':'Segoe UI, Roboto, Helvetica, sans-serif','fontSize':'13px','textColor':'#0b1220'}}}%%
erDiagram
    MODEL ||--o{ DUEL : "LeftModelId / RightModelId"
    MODEL ||--o{ DUEL_RESULT : "produced"
    MODEL ||--o{ ELO_HISTORY : "PartitionKey"
    DUEL ||--o{ DUEL_RESULT : "PartitionKey = DuelId"
    DUEL ||--o{ ELO_HISTORY : "two rows per decisive verdict"
    DUEL_RESULT ||--o| HTML_BLOB : "offloaded when > 64 KB"

    MODEL {
        string PartitionKey "const 'model'"
        string RowKey PK "ModelId — ULID"
        string DisplayName "1..100 chars, unique by name after de-dupe"
        enum ModelType "Local (WebGPU) | Remote (Foundry) | LocalService (Ollama)"
        double CurrentElo "seeded 1200"
        int DuelCount "incremented on every decisive verdict and tie"
        int WinCount
        int DrawCount "losses = DuelCount - WinCount - DrawCount"
        double TdpWatts "Local only — required, > 0"
        string WebLlmModelId "Local only — must match prebuiltAppConfig in web-llm.js"
        string ApiEndpointRef "Remote = deployment name; LocalService = ollama tag"
        decimal InputTokenPricePerMillion "NULL for 7 of 12 remote models"
        decimal OutputTokenPricePerMillion "NULL for 7 of 12 remote models"
        datetime CreatedAt
        string ETag "If-Match on update (standards 5.5)"
    }

    DUEL {
        string PartitionKey "yyyyMM derived from the ULID timestamp"
        string RowKey PK "DuelId — ULID, lexicographically time-ordered"
        string PromptText "user-visible prompt"
        string PromptFull "prompt actually sent to the models"
        string LeftModelId FK
        string RightModelId FK
        string LeftModelName "snapshot — survives model retirement"
        string RightModelName "snapshot"
        datetime StartedAt
        datetime CompletedAt "nullable until both sides finish"
        datetime VerdictDeadline "StartedAt + 24 h"
        enum Verdict "Pending | Left | Right | Tie | Expired"
        enum VerdictSource "Human | Ai — defaults Human for pre-judge rows"
        string WinnerModelId "nullable"
        string LoserModelId "nullable"
        double EloShiftWinner
        double EloShiftLoser
        string JudgeRationale "AI only, clipped to 300 chars"
        string JudgeModel "AI only — AiJudge:Deployment"
        string JudgeStoodDownReason "why no verdict was recorded"
        bool IsPartial "only one side completed"
        string OwnerId "preferred_username — forensic, never authorization"
        string VerdictBy "preferred_username; NULL when VerdictSource = Ai"
        string ETag
    }

    DUEL_RESULT {
        string PartitionKey PK "DuelId"
        string RowKey PK "ModelId"
        long WarmUpDurationMs "time to first token (TTFT) — stored, never emitted as a metric"
        long GenerationDurationMs
        long TotalDurationMs
        int TokenCount "output tokens"
        int PromptTokenCount "nullable — provider usage block"
        int ReasoningTokenCount "nullable — gpt-5 / o-series"
        double TokenVelocity "tokens per second, generation phase"
        string FinishReason
        bool WasTruncated
        string HtmlOutputRaw "normalized; 'blob://...' pointer when > 64 KB"
        long HtmlOutputSizeBytes
        double CharacterDensityRatio
        int OutputQualityScore "persisted — NOT the Arena scorecard score"
        bool IsFailure
        string FailureReason
        double EnergyWh "Local / LocalService — TdpWatts x hours"
        double EnergyCostUsd "GreenStats:ElectricityRateUsd, default 0.12"
        double ApiCostUsd "Remote — NULL when the model has no price"
    }

    ELO_HISTORY {
        string PartitionKey PK "ModelId"
        string RowKey PK "invertedTicks_DuelId — descending time order"
        string DuelId FK
        double EloBefore
        double EloAfter
        double EloShift "EloAfter - EloBefore"
        string Outcome "Win | Loss | Draw"
        string OpponentModelId FK
        double OpponentEloBefore
        datetime RecordedAt
    }

    HTML_BLOB {
        string Container "duel-html-outputs"
        string Path PK "{duelId}/{modelId}.html"
        string ContentType "text/html; charset=utf-8"
    }
